feat: Update production API URL in environment files and refactor `App.jsx` to use an environment variable for the API endpoint.

--- a/email-writer-react/.env.example
+++ b/email-writer-react/.env.example
@@ -5,5 +5,5 @@
 # For local development:
 VITE_API_URL=http://localhost:8080
 
-# For production (Render deployment):
-# VITE_API_URL=https://your-app-name.onrender.com
+# For production (Render deployment), use:
+# VITE_API_URL=https://email-writer-nykt.onrender.com
