--- a/email-writer-react/.env.production
+++ b/email-writer-react/.env.production
@@ -1,5 +1,3 @@
 # Frontend Environment Variables (Production)
-# Update this URL after deploying backend to Render
-
-# Backend API URL (production - Render)
-VITE_API_URL=https://your-app-name.onrender.com
+# Backend API URL (Render deployment)
+VITE_API_URL=https://email-writer-nykt.onrender.com
