fix: Correct Gemini API key integration by using query parameters and update the default Gemini model to `gemini-2.0-flash`.

--- a/email-writer/.env.example
+++ b/email-writer/.env.example
@@ -2,7 +2,8 @@
 # Copy this file to .env and fill in your values
 
 # Gemini API Configuration
-GEMINI_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent
+# IMPORTANT: URL should NOT include the API key - it will be added automatically as a query parameter
+GEMINI_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
 GEMINI_KEY=your-gemini-api-key-here
 
 # Server Configuration (Optional)
